# app/Models/User.php
@@ -6,10 +6,22 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Laravel\Passport\HasApiTokens;
 
+
+/**
+ *  @OA\Schema(
+ *     description="Babyneed model",
+ *     title="Babyneed model",
+ *     required={"nama", "size"},
+ *     @OA\Xml(
+ *         name="Babyneed"
+ *      )
+ * )
+ */
 class User extends Authenticatable
 {
-    use HasFactory, Notifiable;
+    use HasFactory, Notifiable, HasApiTokens;
 
     /**
      * The attributes that are mass assignable.
